[gd_scene load_steps=2 format=3 uid="uid://bgvuq8xqpx3u8"]

[ext_resource type="Script" path="res://scripts/SpikeTest.gd" id="1_kj4q5"]

[node name="SpikeTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_kj4q5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SpacePoker LLM Integration Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LLM Status: Initializing..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputTextLabel" type="RichTextLabel" parent="VBoxContainer/OutputScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=gray]Welcome to the LLM Test Interface!
Enter a message below to test the LLM integration.[/color]"
fit_content = true
scroll_following = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputLineEdit" type="LineEdit" parent="VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your message here..."

[node name="SendButton" type="Button" parent="VBoxContainer/InputContainer"]
layout_mode = 2
text = "Send"

[node name="ClearButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear Output"